<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.SearchNewsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Widget.TheChronicle.Toolbar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:title="@string/app_name">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_icon_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorOnPrimary"
                    app:srcCompat="@drawable/ic_baseline_filter_alt_24"
                    android:layout_gravity="end"
                    android:padding="@dimen/spacing_normal" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/edit_text_search_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:drawableEnd="@drawable/ic_baseline_search_24"
            android:hint="@string/search_news_hint_label"
            android:inputType="text"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal"
            android:textAppearance="@style/TextAppearance.TheChronicle.SearchInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_language"
            style="@style/Widget.TheChronicle.TextInputLayout.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/language_hint_label">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_complete_text_view_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_sort_by"
            style="@style/Widget.TheChronicle.TextInputLayout.Spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_extra_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_weight="1"
            android:hint="@string/sort_by_hint_label">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/auto_complete_text_view_sort_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_start_date"
            style="@style/Widget.TheChronicle.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_weight="1"
            android:hint="@string/start_date_hint_label"
            app:endIconDrawable="@drawable/ic_baseline_date_range_24"
            app:endIconMode="custom"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                tools:text="2020-07-06" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_end_date"
            style="@style/Widget.TheChronicle.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_weight="1"
            android:hint="@string/end_date_hint_label"
            app:endIconDrawable="@drawable/ic_baseline_date_range_24"
            app:endIconMode="custom"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                tools:text="2020-08-09" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:orientation="horizontal"
            app:constraint_referenced_ids="text_input_layout_language, text_input_layout_sort_by"
            app:flow_horizontalGap="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_search_article"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_small"
            android:orientation="horizontal"
            app:constraint_referenced_ids="text_input_layout_start_date, text_input_layout_end_date"
            app:flow_horizontalGap="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow_sort" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:text="@string/search_label"
            android:textAppearance="@style/TextAppearance.TheChronicle.SearchButton"
            app:icon="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow_date"
            app:layout_constraintVertical_bias="0.1" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view_articles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@color/backdropForegroundColor"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_search_article">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>